# recruitee-mcp

./: README.md  pyproject.toml
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/recruitee_mcp/: __init__.py  client.py  config.py  http_server.py  main.py  mcp_server.py  server.py  wrapper.py
tests/: conftest.py  test_client.py  test_http_server.py  test_server.py
